Fixed Auth method not initialised correctly